# test

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: BackEnd.cpp.8388F9885FB3C30A.idx  BackEnd.h.D94C7F515D537366.idx  async.cpp.B8A275AC538B8B93.idx  async.h.98EE51F37F6660BA.idx  async_logger-inl.h.E60530E3B109E6B1.idx  async_logger.h.E7BF3583A7F56E0E.idx  backtracer-inl.h.4791B8F6091BF1FC.idx  backtracer.h.64204CF030322008.idx  base_sink-inl.h.02F160AEC18465FE.idx  base_sink.h.8831DA032C90C472.idx  basic_file_sink-inl.h.E8722C4FA915DE14.idx  basic_file_sink.h.F076167207FE46A0.idx  bundled_fmtlib_format.cpp.9DBB0358654E8113.idx  cfg.cpp.D675EEE2BBB6AF27.idx  circular_q.h.69EE3F06A4346404.idx  color_sinks.cpp.40D8866574705630.idx  common-inl.h.6D48AA6DC33E5E90.idx  common.h.81C0E31FC475DDD1.idx  console_globals.h.98BFCCD2F3148CB6.idx  core.h.79DC23836D26ABBF.idx  file_helper-inl.h.214D645F9996623E.idx  file_helper.h.818C29676E16D021.idx  file_sinks.cpp.F3AB6B7FD9DCB017.idx  fmt.h.8AF6E125B6CB31FD.idx  fmt_helper.h.E5A2A12C7A332F32.idx  format-inl.h.A752643B1AFBF1FE.idx  format.h.97FBF05B2BCFB14D.idx  formatter.h.D2D5986E8DA33525.idx  helpers-inl.h.B033B8161964A1DC.idx  helpers.h.6AE5932ABDB20577.idx  log_msg-inl.h.DA53A536F480C3FB.idx  log_msg.h.A12FBFC56D6A33C2.idx  log_msg_buffer-inl.h.53BE23C18E820FF0.idx  log_msg_buffer.h.41CE3A109F33D534.idx  logger-inl.h.A3CF5D84FB1515B5.idx  logger.h.270248BAFC15ABCF.idx  main.cpp.0C3297C91563A91D.idx  mpmc_blocking_q.h.FA6036005657C7D1.idx  null_mutex.h.FA112E103B9B2622.idx  (+28 more)
assets/qml/: main.qml
logs/: log.txt
src/: Log.cpp  main.cpp
src/include/: Log.h
